--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "flask>=3.1.1",
+    "flask==3.0.3",
+    "flask-migrate==4.0.0",
+    "flask-openapi3[elements,rapidoc,rapipdf,redoc,scalar,swagger]>=4.1.0",
+    "flask-sqlalchemy==3.0.2",
+    "jsonschema==3.0.2",
+    "pydantic==2.11.0",
+    "python-dotenv==1.0.1",
+    "sqlalchemy==2.0.29",
 ]
